<resources>

    <string name="app_name">Focus</string>

    <string name="btn_start">Start</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Do not Have Account?</string>
    <string name="task_add">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="insert_date">Insert Date</string>
    <string name="category">Category</string>
    <string name="add">Add</string>

    <string name="fokus">Everyday focus increase your productivity even habit</string>

    <string name="placeholder_time">00.00</string>
    <string name="placeholder_focus_time">1.50</string>
    <string name="placeholder_date">1 Jan</string>

    <string name="label_no_internet_connection">No internet connections</string>

    <!--drawers-->
    <string name="drawer_developed_by">Developed by The Deadliners Squad</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_cek">Cek Kode Tiket</string>
    <string name="drawer_cara_bayar">Cara Bayar</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--label for menus-->
    <string name="label_todo">Todo</string>
    <string name="label_achievement">Achievement</string>
    <string name="label_statistic">Statistic</string>
    <string name="label_setting">Setting</string>
    <string name="label_logout">Logout</string>
    <string name="label_home">Home</string>
    <string name="focus_message">Focus every day makes you more dicipline and helping you build many useful habits</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_nothing">Nothing To Do :v</string>
    <string name="label_username">Username</string>
</resources>
