<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#010101"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:text="@string/task_add"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:hint="@string/task_name"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:theme="@style/EditText"
                            android:hint="@string/insert_date"
                            android:layout_weight="1"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:theme="@style/EditText"
                            android:hint="@string/category"
                            android:layout_weight="1"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </LinearLayout>

                    <EditText
                        android:id="@+id/add_task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText"
                        android:text="@string/placeholder_time"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@xml/button2"
                android:text="@string/add"
                android:theme="@style/CustomButton2"
                android:layout_marginTop="40dp"
                android:layout_gravity="right"/>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            app:fabSize="normal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>