<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/t1"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/t1"
                android:background="#ffffff" />

        </RelativeLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#828080"
            android:hint="@string/label_username"
            android:inputType="text"
            android:paddingStart="15dp"
            android:theme="@style/CustomEditText" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#828080"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:theme="@style/CustomEditText" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#828080"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:theme="@style/CustomEditText" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#828080"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:theme="@style/CustomEditText" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/button1"
            android:text="@string/sign_up"
            android:theme="@style/CustomButton" />

    </LinearLayout>
</RelativeLayout>